[package]
name = "find-rare-key"
version = "1.0.1"
edition = "2024"
description = "A WebAssembly (WASM) module for generating and searching for rare secp256k1 cryptographic keys, designed for integration with the VisualKey app."
license = "MIT"
keywords = ["wasm", "secp256k1", "ethereum", "visualkey", "keygen"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
k256 = { version = "0.13.3", features = ["ecdsa"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.8"
hex = "0.4.3"
serde-wasm-bindgen = "0.6.5"

[profile.release]
lto = true
opt-level = 3
