[package]
name = "find-rare-keys"
version = "1.0.0"
edition = "2024"
description = "A WebAssembly (WASM) module for generating and searching for rare secp256k1 cryptographic keys, designed for integration with the VisualKey app."
license = "MIT"
keywords = ["wasm", "secp256k1", "ethereum", "visualkey", "keygen"]
categories = ["cryptography", "wasm"]
repository = "https://github.com/denyshorman/visualkey-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }
k256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
serde-wasm-bindgen = "0.6"

[profile.release]
lto = true
opt-level = 3
